Tsoa RTK updates
